--- a/weblog/config/mongrel_cluster.yml
+++ b/weblog/config/mongrel_cluster.yml
@@ -1,5 +1,5 @@
 --- 
-cwd: /var/www/deployed-semacode.com/current
+cwd: /disk2/home/simon/deployed-swc-weblog/current
 log_file: log/mongrel.log
 port: "8100"
 environment: production
