--- a/weblog/test/fixtures/pages.yml
+++ b/weblog/test/fixtures/pages.yml
@@ -1,5 +1,3 @@
-# $Id: pages.yml 300 2007-02-01 23:01:00Z garrett $
-
 page_1:
   id: 1
   permalink: about
@@ -8,3 +6,11 @@ page_1:
   is_active: true
   created_at: 2006-05-15 00:00:00
   modified_at: 2006-05-15 00:00:00
+page_2:
+  id: 2
+  permalink: hello
+  body_raw: How are you.
+  body: How are you.
+  is_active: true
+  created_at: 2009-01-01 12:00:00
+  modified_at: 2009-01-02 12:00:00
