--- a/weblog/test/fixtures/taggings.yml
+++ b/weblog/test/fixtures/taggings.yml
@@ -1,21 +1,21 @@
 --- 
-taggings_003: 
-  tag_id: "2"
-  id: "3"
-  taggable_type: Post
-  taggable_id: "1"                
-taggings_004: 
-  tag_id: "2"
-  id: "4"
-  taggable_type: Page
-  taggable_id: "2"
 taggings_001: 
-  tag_id: "1"
-  id: "1"
+  id: 1
+  tag_id: 1
+  taggable_id: 1
   taggable_type: Page
-  taggable_id: "1"
 taggings_002: 
-  tag_id: "1"
-  id: "2"
+  id: 2
+  tag_id: 1
+  taggable_id: 2
   taggable_type: Page
-  taggable_id: "2"
+taggings_003: 
+  id: 3
+  tag_id: 2
+  taggable_id: 1                
+  taggable_type: Post
+taggings_004: 
+  id: 4
+  tag_id: 2
+  taggable_id: 2
+  taggable_type: Page
