--- a/weblog/config/database_dreamhost.yml
+++ b/weblog/config/database_dreamhost.yml
@@ -1,3 +1,5 @@
+# This software is licensed under GPL v2 or later. See doc/LICENSE and doc/CONTRIBUTORS for details.
+
 # dreamhost is a little different--they use hosts rather than sockets
 
 development:
