--- a/weblog/config/database_postgres.yml
+++ b/weblog/config/database_postgres.yml
@@ -1,3 +1,5 @@
+# This software is licensed under GPL v2 or later. See doc/LICENSE and doc/CONTRIBUTORS for details.
+
 development:
   adapter: postgresql
   database: simplelog
