Fix copyright notices.

--- a/test/fixtures/preferences.yml
+++ b/test/fixtures/preferences.yml
@@ -1,4 +1,4 @@
-# $Id: preferences.yml 300 2007-02-01 23:01:00Z garrett $
+# This software is licensed under GPL v2 or later. See doc/LICENSE for details.
 
 pref_1:
   id: 1
