--- a/test/fixtures/updates.yml
+++ b/test/fixtures/updates.yml
@@ -1,3 +1,5 @@
+# This software is licensed under GPL v2 or later. See doc/LICENSE for details.
+
 update_1:
   id: 1
   last_checked_at: '1981-05-15 00:00:00'
