Was experimenting with using sqlite3 for testing because it's faster, but there's some boolean type problem.

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,11 @@ development:
   database: sw-blog-dev
 
 
+
+production:
+  <<: *login
+  database: sw-blog-dev
+
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
@@ -23,7 +28,11 @@ test:
   <<: *login
   database: sw-blog-test
 
-
-production:
-  <<: *login
-  database: sw-blog-dev
+# Instead of using MySQL, use sqlite3 for testing.
+# Because MySQL over SSL tunnel is sloooow.
+# Except that stupid sqlite3 doesn't work with SQL true/false and this app uses raw SQL
+#test:
+#  adapter: sqlite3
+#  database: db/test.sqlite3
+#  pool: 5
+#  timeout: 5000
