Major improvements to tests. Switched to advanced / foxy fixtures (except for has_many_polymorphs, which doesn't support it). Added and made the fixtures tell a better story. Made all the tests work and updated many of them to latest idiom.
Deleted a "speed test" for updating preferences that appears to me to be useless.

--- a/test/fixtures/authors.yml
+++ b/test/fixtures/authors.yml
@@ -1,30 +1,17 @@
-# $Id: authors.yml 296 2007-01-30 22:31:51Z garrett $
-
-# passwords are all "test"
+# This software is licensed under GPL v2 or later. See doc/LICENSE for details.
 
 garrett:
-  id: 1
   created_at: '2006-05-01 00:00:00'
   modified_at: '2006-05-01 00:00:00'
-  email: garrett@email.com
-  hashed_pass: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
-  name: garrett
+  email: garrett@pinchzoom.com
+  hashed_pass: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3 # = test
+  name: Garrett Murray
   is_active: true
   
-dudeous:
-  id: 2
+simon:
   created_at: '2006-05-01 00:00:00'
   modified_at: '2006-05-01 00:00:00'
-  email: dudeous@email.com
-  hashed_pass: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
-  name: dudeous
+  email: sbwoodside@yahoo.com
+  hashed_pass: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3 # = test
+  name: Simon Woodside
   is_active: false
-  
-guy:
-  id: 3
-  created_at: '2006-05-01 00:00:00'
-  modified_at: '2006-05-01 00:00:00'
-  email: guy@email.com
-  hashed_pass: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
-  name: guy
-  is_active: true
