--- a/test/fixtures/blacklist.yml
+++ b/test/fixtures/blacklist.yml
@@ -1,6 +1,5 @@
-# $Id: blacklist.yml 300 2007-02-01 23:01:00Z garrett $
+# This software is licensed under GPL v2 or later. See doc/LICENSE for details.
 
-item_1:
-  id: 1
+crapfest:
   item: crapfest.com
   created_at: 2006-05-15 00:00:00
