--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -1,13 +1,16 @@
-page_1:
-  id: 1
+# This software is licensed under GPL v2 or later. See doc/LICENSE for details.
+
+# has_many_polymorphs isn't compatible with advanced / foxy fixtures, alas.
+
+about:
   permalink: about
   body_raw: This is about my site.
   body: This is about my site.
   is_active: true
   created_at: 2006-05-15 00:00:00
   modified_at: 2006-05-15 00:00:00
-page_2:
-  id: 2
+
+hello:
   permalink: hello
   body_raw: How are you.
   body: How are you.
