--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
 # This only affect files not already in git
+# Mac filesystem files:
 .DS_Store
+
+# RubyMine project files:
+.idea
+
+# XCode files:
 build
 *.pbxuser
 *.mode1v3
 *.mode2v3
+
+# Rails files:
 *.log
 test.sqlite3
-Thumbs.db
-mylib
+
+# Java build files:
 *.class
+
